sqlx_insert/tests/ui/unsupported_types.stderr
error: enums are not supported
 --> tests/ui/unsupported_types.rs:5:1
  |
5 | / #[sqlx_insert(database(Postgres))]
6 | | pub enum Thing{
7 | |     A, B, C
8 | | }
  | |_^

warning: unused import: `sqlx::Postgres`
 --> tests/ui/unsupported_types.rs:2:5
  |
2 | use sqlx::Postgres;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
